--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browser": {
+    "child_process": false
+  },
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
+    "@stitches/react": "^1.2.8",
+    "axios": "^1.6.7",
+    "keen-slider": "^6.8.6",
+    "next": "14.1.3",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "stripe": "^14.20.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "typescript": "^5"
   }
 }
