--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.6.7",
     "keen-slider": "^6.8.6",
     "next": "14.1.3",
-    "plaiceholder": "^3.0.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.20.0"
